--- a/Implementation/FatSodDental/FatSod.Ressources/Resources.resx
+++ b/Implementation/FatSodDental/FatSod.Ressources/Resources.resx
@@ -3720,4 +3720,7 @@
   <data name="SMSMNG" xml:space="preserve">
     <value>SMS MANAGEMENT</value>
   </data>
+  <data name="of" xml:space="preserve">
+    <value> </value>
+  </data>
 </root>
