insurance bill for golden

--- a/Implementation/FatSodDental/FatSod.Ressources/Resources.fr.resx
+++ b/Implementation/FatSodDental/FatSod.Ressources/Resources.fr.resx
@@ -2758,7 +2758,7 @@
     <value>Jour(s)</value>
   </data>
   <data name="Marqueter" xml:space="preserve">
-    <value>Marketeur</value>
+    <value>Commercial</value>
   </data>
   <data name="RaisonRdv" xml:space="preserve">
     <value>Raison du Rendez Vous</value>
@@ -3722,5 +3722,8 @@
   </data>
   <data name="of" xml:space="preserve">
     <value>le</value>
+  </data>
+  <data name="DateExpiration" xml:space="preserve">
+    <value>Date Expiration Verre</value>
   </data>
 </root>
